@@ -152,6 +152,7 @@ static const int eint[] = {
   REG_BADPAT,  /* (*MARK) must have an argument */
   REG_INVARG,  /* this version of PCRE is not compiled with PCRE_UCP support */
   REG_BADPAT,  /* \c must be followed by an ASCII character */
+  REG_BADPAT,  /* \k is not followed by a braced, angle-bracketed, or quoted name */ 
 };
 
 /* Table of texts corresponding to POSIX error codes */
